feat: Add Java 17's latest function and major change